[gd_scene load_steps=27 format=3 uid="uid://n0m5mbljm4jn"]

[ext_resource type="Script" path="res://Scripts/Hurtbox.gd" id="1_a1qb2"]
[ext_resource type="Script" path="res://Scripts/Test_Enemy.gd" id="1_g1f5d"]
[ext_resource type="PackedScene" uid="uid://ckipaj0b774sn" path="res://Scenes/Components/health.tscn" id="1_yfb20"]
[ext_resource type="Texture2D" uid="uid://3a1p2nsvsp8h" path="res://Assets/Art/Characters/temp_training_dummy.png" id="2_wwy5w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_87met"]
size = Vector3(1.14209, 1.16092, 1)

[sub_resource type="BoxMesh" id="BoxMesh_78lp2"]
size = Vector3(1, 2, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_du7nk"]
atlas = ExtResource("2_wwy5w")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_er6ts"]
atlas = ExtResource("2_wwy5w")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wygue"]
atlas = ExtResource("2_wwy5w")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmw82"]
atlas = ExtResource("2_wwy5w")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj4fb"]
atlas = ExtResource("2_wwy5w")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncnwx"]
atlas = ExtResource("2_wwy5w")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hm1m"]
atlas = ExtResource("2_wwy5w")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs6et"]
atlas = ExtResource("2_wwy5w")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ee60"]
atlas = ExtResource("2_wwy5w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61hny"]
atlas = ExtResource("2_wwy5w")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptxhi"]
atlas = ExtResource("2_wwy5w")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0cbq"]
atlas = ExtResource("2_wwy5w")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_octmg"]
atlas = ExtResource("2_wwy5w")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f07tb"]
atlas = ExtResource("2_wwy5w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wqu1"]
atlas = ExtResource("2_wwy5w")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7qtob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_du7nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er6ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wygue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmw82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj4fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncnwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hm1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs6et")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ee60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61hny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptxhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0cbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_octmg")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f07tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wqu1")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_pow1i"]
size = Vector3(0.697021, 1.15918, 1)

[sub_resource type="Animation" id="Animation_p16mr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_aavi5"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite3D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nr3ou"]
_data = {
"RESET": SubResource("Animation_p16mr"),
"die": SubResource("Animation_aavi5")
}

[node name="Training_Dummy" type="CharacterBody3D"]
transform = Transform3D(1.83, 0, 0, 0, 1.83, 0, 0, 0, 1.83, 0, 0, 0)
collision_layer = 4
script = ExtResource("1_g1f5d")

[node name="PhysCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0192871, 0.58046, 0)
shape = SubResource("BoxShape3D_87met")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
transparency = 1.0
mesh = SubResource("BoxMesh_78lp2")
skeleton = NodePath("")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0.5, 0)
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_7qtob")
animation = &"idle"
autoplay = "idle"

[node name="Health" parent="." instance=ExtResource("1_yfb20")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1638, 0)
max_health = 1000.0

[node name="Hurtbox" type="Area3D" parent="Health" node_paths=PackedStringArray("health")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1638, 0)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_a1qb2")
health = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Health/Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0180054, 0.57959, 0)
shape = SubResource("BoxShape3D_pow1i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nr3ou")
}

[node name="Stun_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Stun_Timer" to="." method="_on_stun_timer_timeout"]
